--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "5.1.0",
-    "reflect-metadata": "0.2.2"
+    "reflect-metadata": "0.2.2",
+    "uid": "2.0.2"
   },
   "devDependencies": {
     "@types/express": "5.0.3",
